<resources>
    <string name="app_name">PetPet</string>
    <string name="action_settings">Settings</string>
    <string name="pet_name">Welsh Corgi</string>
    <string name="pet_list">petlist.json</string>

    <string name="choose_your_pet">Choose Your Pet</string>
    <string name="choose_pet">Pick Me</string>
    <string name="coming_soon">Coming Soon…</string>

    <string name="title_activity_splash">PetPet</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="PET_UPDATE_CHANNEL_ID">Petpet update notification</string>
    <string name="hundred_percent">100%</string>

    <string name="Vet">Vet</string>

    <!--settingsScreen-->
    <string name="settings">Settings</string>
    <string name="language">Language</string>

    <!--settings-->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="KEY_SETTING_LANGUAGE">setting_language</string>


    <string name="store">Store</string>
    <string name="food">Food</string>
    <string name="item">Item</string>
    <string name="item_description_multiLine">There are multiple lines of item description</string>
    <string name="_100">$100</string>
    <string name="buy">Buy</string>
    <string name="play">Play</string>
    <string name="walk">Walk</string>
    <string name="_0">0</string>
    <string name="feed">feed</string>
    <string name="name">Name Your Pet</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="confirm">confirm</string>
    <string name="empty_name_msg">Pet name cannot be empty</string>
    <string name="PET_NAME_KEY">pet_name</string>
    <string name="account_summary">Account Summary</string>
</resources>
