<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/general_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item" />

        <TextView
            android:id="@+id/general_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:singleLine="false"
            android:text="@string/item_description_multiLine" />

        <ImageView
            android:id="@+id/general_item_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/general_item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/_0"
                app:layout_constraintBottom_toBottomOf="@+id/general_item_feed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/general_item_feed" />

            <Button
                android:id="@+id/general_item_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>
