<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pet_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/store_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item" />

        <TextView
            android:id="@+id/store_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:singleLine="false"
            android:text="@string/item_description_multiLine" />

        <ImageView
            android:id="@+id/store_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/store_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/_100"
                app:layout_constraintBottom_toBottomOf="@+id/store_item_buy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/store_item_buy" />

            <Button
                android:id="@+id/store_item_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/buy"
                app:layout_constraintStart_toEndOf="@+id/store_item_price"/>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>
